# websocket

./: .gitignore  Base64.cpp  Base64.h  CMakeLists.txt  DataFrame.cpp  DataFrame.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  README.md  SECURITY.md  Socket.cpp  Socket.h  Url.h  WebSocket.cpp  WebSocket.h  base64.cpp  base64.h  build.sh  chat.html  client.html  errors.txt  header.txt  main.cpp  sha1.cpp  sha1.h
chat/: index.html
corpus/: con_small  handshake
cpp/: README.md  build.sh
cpp/corpus/: con_big  con_small
cpp/exploits/: EXC_BAD_ACCESS.html
cpp/src/: CMakeLists.txt  flags.h  wsserver.cpp
cpp/src/base64/: base64.cpp
cpp/src/hash/: sha1.h
cpp/src/http/: http_request.h  http_response.cpp  http_response.h
cpp/src/socket/: socket.cpp  socket.h
cpp/src/websocket/: dataframe.h  websocket.h
random/: CMakeLists.txt  bin_to_hex.cpp  lamda_buffer_overflow.cpp  print_buffer.cpp  thread_memory.cpp
random/base64_full/: Base64.cpp  Base64.h
rust/: .gitignore  Cargo.toml  README.md
rust/src/: base64.rs  dataframe.rs  http_parser.rs  lib.rs  main.rs  sha1.rs  socket.rs  websocket.rs
rust/src/websocket/: connection.rs
rust/tests/: fuzzingclient.json
rust/tests/reports/servers/: index.html  index.json
rust_new/: LICENCE  README.md
rust_new/src/: base64.rs  websocket.rs
rust_new/src/websocket/: connection.rs  packet.rs
rust_new/tests/: client.html
src/: CMakeLists.txt  flags.h  wsserver.cpp
src/aes/: aes.cpp  aes.h
src/base64/: base64.cpp  base64.h
src/crypto/: aes.cpp  aes.h  curve-x25519.cpp  curve-x25519.h
src/hash/: sha1.cpp  sha256.cpp  sha256.h  sha384.cpp  sha384.h
src/http/: http_request.cpp  request.cpp  request.h  response.cpp
src/sha1/: sha1.cpp  sha1.h
src/sha256/: sha256.cpp  sha256.h
src/socket/: socket.cpp  socket.h
src/tls/: TLSv13.h
src/tls13/: ecdsa-p256.cpp  ecdsa-p256.h  ecdsa-p256.md  tls13_socket.h
src/websocket/: dataframe.cpp  frame.cpp  frame.h  websocket.cpp  websocket.h
tests/: CMakeLists.txt  aes_test.cpp  base64_test.cpp  browser.html  curve-x25519.cpp  dataframe_test.cpp  ecdsa-p256_test.cpp  fuzzingclient.json  sha1_test.cpp  sha256_test.cpp  sha384_test.cpp
websocket/: CMakeLists.txt  WebSocketServer.cpp  main.cpp  server.cpp  server.h
websocket/base64/: Base64.h  base64.cpp  base64.h
websocket/http/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Url.h
websocket/sha1/: sha1.cpp  sha1.h
websocket/socket/: DataFrame.cpp  DataFrame.h  Socket.cpp  Socket.h  WebSocket.cpp  WebSocket.h  server.cpp  server.h
zig/: README.md  build.zig
zig/fuzzing/corpus/: conn_big  conn_small
zig/src/: base64.zig  chat.zig  dataframe.zig  http.zig  main.zig  websocket.zig
