[package]
name = "webrocket"
version = "0.1.0"
authors = ["Tobias Müller <git@tsmr.eu>"]
edition = "2021"
description = "A closure focused WebSocket server implementation."
repository = "https://github.com/otsmr/websocket"
license-file = "LICENCE"
categories = ["Asynchronous", "Network", "WebSocket"]
exclude = ["/tests"]
default-run = "server"


[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1", features = ["net", "macros", "sync", "time", "io-util", "rt-multi-thread"] }
